--- a/styles/blocks/section-content/section-content.less
+++ b/styles/blocks/section-content/section-content.less
@@ -1,7 +1,7 @@
 .section-content {
     padding: 30px 0;
 
-    @media @screen-gt-s {
+    @media @screen-gt-m {
         padding-top: 40px;
         padding-bottom: 40px;
     }
