--- a/styles/styles.less
+++ b/styles/styles.less
@@ -9,5 +9,6 @@
 @import 'blocks/header/header';
 @import 'blocks/logo/logo';
 @import 'blocks/menu/menu';
+@import 'blocks/services/services';
 @import 'blocks/section-content/section-content';
 @import 'blocks/product-card/product-card';
