--- a/styles/blocks/services/services.less
+++ b/styles/blocks/services/services.less
@@ -24,10 +24,11 @@
   }
 
   &__text {
-    margin: auto 0 auto 20px;
+    margin: auto 20px;
     line-height: 20px;
 
     @media @screen-gt-s {
+      margin-right: 0;
       margin-left: 10px;
     }
 
