--- a/styles/styles.less
+++ b/styles/styles.less
@@ -12,3 +12,4 @@
 @import 'blocks/services/services';
 @import 'blocks/section-content/section-content';
 @import 'blocks/product-card/product-card';
+@import 'blocks/footer/footer';
