--- a/styles/styles.less
+++ b/styles/styles.less
@@ -5,11 +5,15 @@
 @import 'common/grid/grid';
 @import 'common/column/column';
 @import 'common/heading/heading';
+@import 'common/text-style/text-style';
 
+@import 'blocks/app/app';
 @import 'blocks/header/header';
 @import 'blocks/logo/logo';
 @import 'blocks/menu/menu';
 @import 'blocks/services/services';
 @import 'blocks/section-content/section-content';
+@import 'blocks/social/social';
 @import 'blocks/product-card/product-card';
 @import 'blocks/footer/footer';
+
